avance ultima pantalla

--- a/app/src/main/res/drawable/borde_nombre_alarma.xml
+++ b/app/src/main/res/drawable/borde_nombre_alarma.xml
@@ -13,7 +13,7 @@
         android:bottomRightRadius="15dp" />
 
     <!-- Borde opcional -->
-    <stroke android:width="2dp" android:color="@color/colo2" />
+    <stroke android:width="2dp" android:color="@color/Color2" />
 
     <!-- Padding interno opcional -->
     <padding
