--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,7 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.SwitchEnAndroid" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- ... -->
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorOnPrimary">@color/white</item>
         <item name="switchStyle">@style/Widget.App.Switch</item>
     </style>
 
