--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.SwitchEnAndroid" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.SwitchEnAndroid" parent="Theme.Material3.DayNight.NoActionBar">
 
         <item name="switchStyle">@style/Widget.App.Switch</item>
     </style>
@@ -11,4 +11,12 @@
 
     <style name="ThemeOverlay.App.Switch" parent="">
     </style>
+
+    <style name="CustomSliderLabel" parent="Widget.Material3.Tooltip">
+        <item name="backgroundTint">@color/Color2</item>
+        <item name="android:strokeColor">@color/Color5_claro</item>
+        <item name="android:strokeWidth">3</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
