--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,118 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/Color3_oscuro"
     tools:context=".home">
 
-    <TextView
-        android:id="@+id/crear_alarma"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:text="@string/bienvenido"
-        android:textAlignment="center"
-        android:textColor="@color/Color5_claro"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/alarmas"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/alarmas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="26dp"
-        android:text="@string/alarmas"
-        android:textColor="@color/Color5_claro"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/crear_alarma" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/alarmas">
+        android:layout_height="match_parent"
+        android:background="@color/Color3_oscuro">
 
         <TextView
-            android:id="@+id/itemalarma"
+            android:id="@+id/crear_alarma"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:paddingStart="40dp"
-            android:text="@string/alarmaUno"
-            android:textColor="@color/Color3_claro"
-            android:textSize="15sp"
+            android:layout_marginTop="50dp"
+            android:text="@string/bienvenido"
+            android:textAlignment="center"
+            android:textColor="@color/Color5_claro"
+            android:textSize="32sp"
             android:textStyle="bold"
-            app:flow_horizontalAlign="start" />
+            app:layout_constraintBottom_toTopOf="@id/alarmas"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/alarmas"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="26dp"
+            android:text="@string/alarmas"
+            android:textColor="@color/Color5_claro"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/crear_alarma" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/alarmas">
 
-            <EditText
-                android:id="@+id/alarmaUnoHora"
+            <TextView
+                android:id="@+id/itemalarma"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="40dp"
-                android:background="@drawable/rounded_edittexthora"
-                android:fontFamily="sans-serif-medium"
-                android:inputType="textEmailAddress"
-                android:minWidth="145dp"
-                android:minHeight="56dp"
-                android:text="@string/alarmaUnoHora"
-                android:textColor="@color/white"
-                android:textSize="24sp"
-                app:layout_constraintEnd_toStartOf="@+id/alarmaUnoTemp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_min="100dp" />
+                android:layout_marginTop="10dp"
+                android:paddingStart="40dp"
+                android:text="@string/alarmaUno"
+                android:textColor="@color/Color3_claro"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:flow_horizontalAlign="start" />
 
-            <EditText
-                android:id="@+id/alarmaUnoTemp"
-                android:layout_width="wrap_content"
-                android:layout_height="56dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                android:background="@drawable/rounded_edittexttemp"
-                android:fontFamily="sans-serif-medium"
-                android:inputType="textEmailAddress"
-                android:minHeight="56dp"
-                android:text="@string/alarmaUnotemp"
-                android:textColor="@color/white"
-                android:textSize="24sp"
-                android:minWidth="100dp"
-                app:layout_constraintStart_toEndOf="@+id/alarmaUnoHora"
-                app:layout_constraintTop_toTopOf="parent" />
+                <EditText
+                    android:id="@+id/alarmaUnoHora"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="40dp"
+                    android:background="@drawable/rounded_edittexthora"
+                    android:fontFamily="sans-serif-medium"
+                    android:inputType="textEmailAddress"
+                    android:minWidth="145dp"
+                    android:minHeight="56dp"
+                    android:text="@string/alarmaUnoHora"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toStartOf="@+id/alarmaUnoTemp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_min="100dp" />
 
-            <com.google.android.material.materialswitch.MaterialSwitch
-                android:id="@+id/my_switch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="40dp"
-                android:checked="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:thumbIcon="@drawable/check"
-                app:trackDecorationTint="@color/Color4"
-                app:trackTint="@color/Color4" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <EditText
+                    android:id="@+id/alarmaUnoTemp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="56dp"
+                    android:background="@drawable/rounded_edittexttemp"
+                    android:fontFamily="sans-serif-medium"
+                    android:inputType="textEmailAddress"
+                    android:minHeight="56dp"
+                    android:text="@string/alarmaUnotemp"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:minWidth="100dp"
+                    app:layout_constraintStart_toEndOf="@+id/alarmaUnoHora"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.materialswitch.MaterialSwitch
+                    android:id="@+id/my_switch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="40dp"
+                    android:checked="true"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:thumbIcon="@drawable/check"
+                    app:trackDecorationTint="@color/Color4"
+                    app:trackTint="@color/Color4" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/itemalarmados"
@@ -258,25 +260,47 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </LinearLayout>
+        </LinearLayout>
 
+        <Button
+            android:id="@+id/boton20"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/Color5_claro"
+            android:minHeight="50dp"
+            android:text="Crear alarma"
+            android:textColor="@color/Color1_oscuro"
+            android:textSize="14sp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="16dp"
+            app:cornerRadius="100dp"
+            app:layout_constraintBottom_toTopOf="@+id/menu_button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/boton20"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/Color5_claro"
-        android:minHeight="50dp"
-        android:text="Crear alarma"
-        android:textColor="@color/Color1_oscuro"
-        android:textSize="14sp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="50dp"
-        app:cornerRadius="100dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/menu_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/menu_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:fitsSystemWindows="true"
+        android:background="@color/Color3_oscuro"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/drawer_menu"
+        app:itemTextAppearance="@style/MenuItemTextStyle"
+        app:itemBackground="@drawable/nav_item_background"
+        app:itemTextColor="@color/Color5_claro" />
+
+</androidx.drawerlayout.widget.DrawerLayout>
